Fix textview's padding
Defining a padding for the textview in CSS, resulted to a black vertical
bar to be shown in place of the padding, when the scrollbar appeared.

Remove padding and add border for the textview.

--- a/res/gdice.css
+++ b/res/gdice.css
@@ -1,7 +1,3 @@
-#textview {
-  padding: 5px;
-}
-
 #dice_expression.valid {
   background: white;
 }
